# Code-Compass-v0.1.0-MVP

./: .gitignore  CHANGELOG.md  CODE_EXPORT_FOR_REVIEW.md  CODE_REVIEW_CHECKLIST.md  EMPIRICAL_VALIDATION_REPORT.md  FINAL_VALIDATION_REPORT.md  FIXES_SUMMARY.md  GEMINI_FEEDBACK_ANALYSIS.md  GEMINI_REVIEW_GUIDE.md  GITHUB_SETUP_GUIDE.md  MVP_DELIVERY_REPORT.md  PYPI_PUBLISHING_GUIDE.md  PYPI_READY_SUMMARY.md  README.md  REPO_IMPROVEMENTS_SUMMARY.md  TEST_REPORT.md  empirical_test.py  empirical_test_verbose.py  export_for_review.py  pyproject.toml  run_all_tests.sh  sample_repo_map.txt  test_ai_workflow.py  test_ast_fault_tolerance.py  test_django.py
code_compass/: cli.py  map_generator.py
scripts/: empirical_test.py  empirical_test_verbose.py  test_ai_workflow.py  test_ast_fault_tolerance.py  test_django.py
tests/: test_cache.py  test_cache_performance.py  test_formatter.py  test_python_parser.py  test_real_project.py  test_relative_imports.py  test_type_annotations.py
