[project]
name = "code-compass"
version = "0.1.0"
description = "Fast code map generator for AI coding assistants"
authors = [{name = "Xiangyu Li", email = "xiangyu@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
code-compass = "code_compass.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
